@@ -154,7 +154,7 @@
     <ProjectGuid>{311C3C36-E612-47A7-B4E8-443ABF32CBA6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>zombono</RootNamespace>
-    <ProjectName>Zombono</ProjectName>
+    <ProjectName>EuphoriaEngine</ProjectName>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
